--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "bids-image-viewer",
+  "version": "0.1.1",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
-    "@niivue/niivue": "^0.36.0",
+    "@niivue/niivue": "^0.37.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
